Updating few configuration

--- a/etc/httpd/conf/httpd.conf
+++ b/etc/httpd/conf/httpd.conf
@@ -28,7 +28,7 @@
 # same ServerRoot for multiple httpd daemons, you will need to change at
 # least PidFile.
 #
-ServerRoot "/etc/httpd"
+ServerRoot "/home/sbalinen/jenkins-httpd/etc/httpd"
 
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
@@ -39,7 +39,7 @@ ServerRoot "/etc/httpd"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 80
+Listen 8000
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -63,8 +63,8 @@ Include conf.modules.d/*.conf
 # It is usually good practice to create a dedicated user and group for
 # running httpd, as with most system services.
 #
-User apache
-Group apache
+User sbalinen
+Group sbalinen
 
 # 'Main' server configuration
 #
@@ -116,19 +116,19 @@ ServerAdmin root@localhost
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/var/www/html"
+DocumentRoot "/home/sbalinen/jenkins-httpd/var/www/html"
 
 #
 # Relax access to content within /var/www.
 #
-<Directory "/var/www">
+<Directory "/home/sbalinen/jenkins-httpd/var/www">
     AllowOverride None
     # Allow open access:
     Require all granted
 </Directory>
 
 # Further relax access to the default document root:
-<Directory "/var/www/html">
+<Directory "/home/sbalinen/jenkins-httpd/var/www/html">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -244,7 +244,7 @@ LogLevel warn
     # client.  The same rules about trailing "/" apply to ScriptAlias
     # directives as to Alias.
     #
-    ScriptAlias /cgi-bin/ "/var/www/cgi-bin/"
+    ScriptAlias /cgi-bin/ "/home/sbalinen/jenkins-httpd/var/www/cgi-bin/"
 
 </IfModule>
 
@@ -252,7 +252,7 @@ LogLevel warn
 # "/var/www/cgi-bin" should be changed to whatever your ScriptAliased
 # CGI directory exists, if you have that configured.
 #
-<Directory "/var/www/cgi-bin">
+<Directory "/home/sbalinen/jenkins-httpd/var/www/cgi-bin">
     AllowOverride None
     Options None
     Require all granted
